# JoshithReddyAleti-Manufacturing_Cognitive_Command_System_MCCS

./: .env  .env.example  .gitignore  EXTENDED_README.md  Manufacturing Cognitive Command System (MCCS).docx  PRD.md  README.md  api.py  app.py  pyproject.toml  requirements.txt  run_demo.py  run_realtime_test.py
.kiro/settings/: mcp.json
frontend/: package.json
mccs/: __init__.py
mccs/agents/: __init__.py  alternatives.py  auto_trigger.py  chatbot.py  email_generator.py  explanation.py  financial_impact.py  orchestrator.py  policy_safety.py  production_rebalancing.py  signal_intelligence.py  supply_chain.py
mccs/cognitive/: __init__.py  causal_graph.py  explainability.py  llm_engine.py  risk_propagation.py  simulation.py
mccs/config/: __init__.py  industries.py  settings.py
mccs/mcp_servers/: __init__.py  base.py  economics.py  geopolitics.py  labor.py  logistics.py  stocks.py  trade.py  weather.py
mccs/models/: __init__.py  graph.py  signals.py
mccs/ui/: __init__.py  components.py
src/app/: layout.tsx  page.tsx
tests/: test_full_pipeline.py
