[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mccs"
version = "0.1.0"
description = "Manufacturing Cognitive Command System - Enterprise disruption intelligence"
requires-python = ">=3.11"
dependencies = [
    "streamlit==1.40.0",
    "langgraph==0.2.60",
    "langchain==0.3.12",
    "langchain-openai==0.2.14",
    "networkx==3.4.2",
    "ortools==9.11.4210",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "httpx==0.27.2",
    "pydantic==2.10.3",
    "python-dotenv==1.0.1",
    "plotly==5.24.1",
    "mcp==1.1.0",
    "uvicorn==0.32.1",
    "fastapi==0.115.6",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "ruff==0.1.14",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
